<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.doknotifikasjon</groupId>
	<artifactId>doknotifikasjon</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>knot001</module>
		<module>knot002</module>
		<module>knot003</module>
		<module>knot004</module>
		<module>knot005</module>
		<module>knot006</module>
		<module>snot001</module>
		<module>snot002</module>
		<module>rnot001</module>
		<module>rnot002</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.5</version>
	</parent>

	<properties>
		<java.version>17</java.version>

		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
		<apache-cxf.version>3.5.4</apache-cxf.version>
		<commons-validator.version>1.7</commons-validator.version>
		<springdoc-openapi-ui.version>1.6.13</springdoc-openapi-ui.version>

		<!-- Dersom confluent blir oppgradert bør også teamdokumenthandtering-avro-schemas sin avro-versjon bli det for å være i synk med confluent -->
		<!-- Confluent-versjon 7.3.0 av kafka-avro-serializer bruker avro-versjon 1.11.0 -->
		<confluent.version>7.3.0</confluent.version>
		<teamdokumenthandtering-avro-schemas.version>357738b9</teamdokumenthandtering-avro-schemas.version>

		<tjenestespesifikasjon.version>1.2019.09.25-00.21-49b69f0625e0</tjenestespesifikasjon.version>
		<vault-jdbc.version>1.3.9</vault-jdbc.version>
		<token-support.version>2.1.8</token-support.version>

		<!-- Test -->
		<spring-cloud-contract-wiremock.version>3.1.5</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>knot001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>knot002</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>knot003</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>knot004</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>knot005</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>knot006</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>snot001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>snot002</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>rnot001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.doknotifikasjon</groupId>
				<artifactId>rnot002</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.tjenestespesifikasjoner</groupId>
				<artifactId>altinn-notification-agency-external-basic</artifactId>
				<version>${tjenestespesifikasjon.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${apache-cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-validator</groupId>
				<artifactId>commons-validator</artifactId>
				<version>${commons-validator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>

			<!-- Kafka -->
			<dependency>
				<groupId>io.confluent</groupId>
				<artifactId>kafka-avro-serializer</artifactId>
				<version>${confluent.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.teamdokumenthandtering</groupId>
				<artifactId>teamdokumenthandtering-avro-schemas</artifactId>
				<version>${teamdokumenthandtering-avro-schemas.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav</groupId>
				<artifactId>vault-jdbc</artifactId>
				<version>${vault-jdbc.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>